caps: prevent connection hang when none are requested

Konversation didn't send CAP END after CAP LS, unless it actually requested caps with CAP REQ. As per https://ircv3.net/specs/extensions/capability-negotiation.html it must send CAP END - otherwise servers will just hang the connection and never complete the initial registration.

BUG: 471940