src/irc/server.cpp
@@ -781,6 +781,8 @@ void Server::capInitiateNegotiation(const QString &availableCaps)
         getStatusView()->appendServerMessage(i18n("Info"),i18n("Requesting capabilities: %1", capsString));
         queue(QStringLiteral("CAP REQ :") + capsString, HighPriority);
         m_capRequested++;
+    } else {
+        capEndNegotiation();
     }
 }
 
